unpackaged/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Category__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Category__c</fullName>
    <description>Category that this log record falls into.</description>
    <externalId>true</externalId>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>