unpackaged/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Data2__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Data2__c</fullName>
    <description>More application data related to this log entry</description>
    <label>Data2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>