unpackaged/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Data__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Data__c</fullName>
    <description>Application data related to this log entry</description>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>