unpackaged/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Level__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Level__c</fullName>
    <description>Indicates verbosity of this log record. 1 = Fatal, 2 = Error, 3 = Warn, 4 = Info, 5 = Debug, 6 = Trace.</description>
    <externalId>true</externalId>
    <label>Level</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>