unpackaged/main/default/objects/appirio_core__App_Log__c/fields/appirio_core__Origin__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Origin__c</fullName>
    <description>Creator of this log message. Application-specific.</description>
    <externalId>true</externalId>
    <label>Origin</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>