unpackaged/main/default/objects/appirio_core__App_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>appirio_core__Category__c</columns>
    <columns>appirio_core__Message__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>